Added address functionality and placeholders

--- a/home.html
+++ b/home.html
@@ -45,14 +45,13 @@
                 <!--LOCATION-->
                 <li>
                     <label for="locations">Location</label>
-                    <select name="locations" class="locations" 
-                    pattern="[1-4]"
+                    <select name="locations" class="locations" id="address_picker" 
                     required>
                         <option value="" disabled selected hidden>Choose a Location</option>
-                        <option value="0">Winnipeg West</option>
-                        <option value="1">Winnipeg East</option>
-                        <option value="2">Winnipeg North</option>
-                        <option value="3">Winnipeg South</option>
+                        <option value="123 Dafoe RD">Winnipeg West</option>
+                        <option value="3113 Pembina Highway">Winnipeg East</option>
+                        <option value="1485 Portage Ave">Winnipeg North</option>
+                        <option value="510 Main St">Winnipeg South</option>
                     </select>
                 </li>
 
