--- a/home.html
+++ b/home.html
@@ -193,21 +193,21 @@
                 </li>
 
                 <li>
-                    <img src="./styles/icon-set/server-icon.png" alt="Ian Spellman">
+                    <img src="./styles/icon-set/pikachu.jpg" alt="Mr. Pikachu">
                     <blockquote>
-                        <p>Oh man my life got so crazy once I started using this website.</p>
+                        <p>pika pika pika</p>
                     </blockquote>
-                    <h3>Ian Spellman</h3>
-                    <h4>Spellcorp Inc.</h4>
+                    <h3>Pikachu</h3>
+                    <h4>Nintendo</h4>
                 </li>
 
                 <li>
-                    <img src="./styles/icon-set/server-icon.png" alt="Ian Spellman">
+                    <img src="./styles/icon-set/zuck.jpg" alt="Mark Zuckerberg">
                     <blockquote>
-                        <p>Oh man my life got so crazy once I started using this website.</p>
+                        <p>This website is better than mine.</p>
                     </blockquote>
-                    <h3>Ian Spellman</h3>
-                    <h4>Spellcorp Inc.</h4>
+                    <h3>Mark Zuckerberg</h3>
+                    <h4>Meta</h4>
                 </li>
 
             </ul>
