Renamed filter options

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div id="filter_scroll_summary">
             <div id="filter_div">
                 <div class="dropdown">
-                    <button onclick="priceDropdown()" class="dropbtn">Price Filters</button>
+                    <button onclick="priceDropdown()" class="dropbtn">Sort by Price</button>
                     <div id="priceDropdown" class="dropdown-content">
                         <div id="price_filters"> </div>
                     </div>
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button onclick="seatsDropdown()" class="dropbtn"># Of Seats</button>
+                    <button onclick="seatsDropdown()" class="dropbtn">Number of Seats</button>
                     <div id="seatsDropdown" class="dropdown-content">
                     
                     </div>
@@ -67,7 +67,7 @@
 
 
                 <div class="dropdown">
-                    <button onclick="budgetDropdown()" class="dropbtn">Budget</button>
+                    <button onclick="budgetDropdown()" class="dropbtn">Filter by Price</button>
                     <div id="budgetDropdown" class="dropdown-content">
                         
                     </div>
