--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <br />
         <div id="filter_scroll_summary">
-            <div id="filter_div">
+            <div id="filter_div"  style="margin-left:1.5%; width:14%">
                 <div class="dropdown">
                     <button onclick="priceDropdown()" class="dropbtn">Sort by Price</button>
                     <div id="priceDropdown" class="dropdown-content">
