overflow hidded summary

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
 
-            <div id="summary_div">
+            <div id="summary_div" style="overflow:hidden">
                 <h2 id="summary_vehicle">Summary</h2>
                 <div id="summary_info_div"></div>
 
