full size suv pic update

--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
                     </div>
 
                     <div class="option" onclick="selectOption(this, 'carType', 'full_SUV')">
-                        <img src="surveyimages/suv.png" alt="SUV">
+                        <img src="suvImages/2024_Chevrolet_Suburban.jpg" alt="SUV">
                         <span>Full sized SUV</span>
                     </div>
 
