change height on vehicle scroll

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <button class="resetfiltersbtn" id="resetFiltersButton">Reset Filters</button>
         </div>
 
-        <div id="vehicle_scroll">
+        <div id="vehicle_scroll" style="height:70vh">
             <!-- cars go here, javascript to flip between cars/insurance/add-ons -->
             <div id="vehicle_container"></div>
         </div>
