--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 
     <script>
-        window.scroll(0, document.documentElement.scrollHeight)
+        window.scroll(0, 100)
     </script>
     <script src="scripts/ProgressBar.js" type="text/javascript"></script>
 
