--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div id="insurance_scroll">
             <div id="insurance_options">
-                <h2>Insurance Packages</h2>
+                <h2 >Insurance Packages</h2>
                 <template id="insurance_package_template">
                     <div class="insurance_option">
                         <h3 id="insurance_name">Collision Damage Waiver (CDW)</h3>
@@ -104,7 +104,7 @@
 
 
 
-        <div id="addons_scroll">
+        <div id="addons_scroll" style="color: #333">
             <div id="addons_options">
                 <h2>Add-Ons</h2>
 
